--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.7-alpha.4",
+    "express-fileupload": "^1.2.0",
+    "express-formidable": "^1.2.0",
+    "formidable": "^1.2.2",
+    "helmet": "^4.1.0",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
