--- a/package.json
+++ b/package.json
@@ -31,6 +31,27 @@
     "url": "https://github.com/conyema/sec/issues"
   },
   "homepage": "https://github.com/conyema/sec#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cloudinary": "^1.22.0",
+    "cors": "^2.8.5",
+    "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
+    "express-formidable": "^1.2.0",
+    "express-validator": "^6.6.1",
+    "formidable": "^1.2.2",
+    "helmet": "^4.1.0",
+    "http-errors": "^1.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.3.0",
+    "pg-hstore": "^2.3.3",
+    "pm2": "^4.4.0",
+    "sequelize": "^6.3.3",
+    "sequelize-cli": "^6.2.0"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "coveralls": "^3.0.11",
@@ -42,25 +63,5 @@
     "nyc": "^15.0.1",
     "sinon": "^9.0.2",
     "supertest": "^4.0.2"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cloudinary": "^1.22.0",
-    "cors": "^2.8.5",
-    "debug": "^4.1.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.2.0",
-    "express-formidable": "^1.2.0",
-    "formidable": "^1.2.2",
-    "helmet": "^4.1.0",
-    "http-errors": "^1.8.0",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "pg": "^8.3.0",
-    "pg-hstore": "^2.3.3",
-    "pm2": "^4.4.0",
-    "sequelize": "^6.3.3",
-    "sequelize-cli": "^6.2.0"
   }
 }
