--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "engines": {
     "node": "12.18.2"
   },
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "lint": "eslint .",
     "seq-init": "sequelize init",
     "seq-model": "npx sequelize model:generate --name property --attributes name:string,cityId:integer,estateTypeId:integer,floorSpace:decimal,balcony:integer,balconySpace:decimal,bedroom:integer,bathroom:integer,garage:integer,parkingSpace:integer,petsAllowed:boolean,thumnailUrl:string,description:text,statusId:integer --force",
     "setup-db": "node api/db/setup.js",
-    "start": "pm2 start ./api/app.js --name sec-api",
-    "start-dev": "set DEBUG=app:* & nodemon ./api/app.js",
+    "start": "pm2 start ./app.js --name sec-api",
+    "start-dev": "set DEBUG=app:* & nodemon ./app.js",
     "test": "mocha test/**/*.spec.js --exit",
     "test-dev": "mocha api/tests/**/*.spec.js --exit"
   },
@@ -49,6 +49,7 @@
     "pg": "^8.3.0",
     "pg-hstore": "^2.3.3",
     "pm2": "^4.4.0",
+    "pug": "^3.0.0",
     "sequelize": "^6.3.3",
     "sequelize-cli": "^6.2.0"
   },
