--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,10 @@
         "ecmaVersion": 2018
     },
     "rules": {
-      "no-console": "off"
+      "no-console": "off",
+      "no-loss-of-precision": "off",
+      "no-nonoctal-decimal-escape": "off",
+      "no-useless-backreference": "off",
+      "no-unsafe-optional-chaining": "off"
     }
 }
