--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "homepage": "https://github.com/conyema/sec#readme",
   "dependencies": {
     "@prisma/client": "^3.10.0",
+    "@quixo3/prisma-session-store": "^3.1.3",
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.27.1",
     "cors": "^2.8.5",
@@ -51,6 +53,8 @@
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
     "passport-auth0": "^1.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "pm2": "^5.1.2",
@@ -66,7 +70,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
     "gulp": "^4.0.2",
-    "mocha": "^9.1.3",
+    "mocha": "^9.2.1",
     "nodemon": "^2.0.15",
     "nyc": "^15.1.0",
     "prisma": "^3.9.1",
