--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require('path')
 
 module.exports = {
-  config: path.resolve('./api/database/config', 'config.js'),
-  'models-path': path.resolve('./api/database/models'),
-  'seeders-path': path.resolve('./api/database/seeders'),
-  'migrations-path': path.resolve('./api/database/migrations'),
+  config: path.resolve('./config/sequelize', 'config.js'),
+  'models-path': path.resolve('./config/sequelize', 'models'),
+  'seeders-path': path.resolve('./config/sequelize', 'seeders'),
+  'migrations-path': path.resolve('./config/sequelize', 'migrations'),
 }
