--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "An API for a Real Estate Agency",
   "engines": {
-    "node": "14.16.0"
+    "node": "14.18.3"
   },
   "main": "app.js",
   "scripts": {
     "lint": "eslint .",
+    "db-migration": "npx sequelize db:migrate",
     "start": "pm2 start ./app.js --name sec-api",
     "stop": "pm2 stop sec-api",
     "dev": "set DEBUG=app:* & nodemon ./app-dev.js",
@@ -73,7 +74,7 @@
     "mocha": "^9.2.1",
     "nodemon": "^2.0.15",
     "nyc": "^15.1.0",
-    "prisma": "^3.9.1",
+    "prisma": "^3.10.0",
     "sinon": "^12.0.1",
     "supertest": "^6.1.6"
   }
