--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.27.1",
+    "connect-session-sequelize": "^7.1.2",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "debug": "^4.3.2",
     "del": "^6.0.0",
     "dotenv": "^10.0.0",
